<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="Datalogger_SchSkid" Id="{fddca443-8922-4ea4-8bd9-c7b3aa5ffc03}">
    <Declaration><![CDATA[TYPE Datalogger_SchSkid :
STRUCT

	MesData							: Datalogger ; 							(* MesData *)
                        			                			
	MesComutLocal					: BOOL; 								(* FALSE := Local, TRUE := Remote (DI_204) *)
	MesState_MVCB					: BOOL; 								(* True := Fermé, False := Ouvert (DI_205) *)
	MesWatchdog_ProtectRelayVIP		: BOOL; 								(* WatchDog of VIP410 (DI_201)			   *)
	MesFault_ProtectRelayVIP		: BOOL; 								(* TRUE:= Fault, False:= OK, Déclenchement du défaut VIP (DI_206) *)
	                        			
	MesToggleRead					: BOOL; 								(* Cal State com of FB IO *)
	MesToggleWrite					: BOOL;;  								(* Cal State com of FB IO *)
	 
	DS_Synthesis					: TOR ; 								(* Synthesis of door sensors True = a door is opened (DI_209) 			 *)
	CB_INV							: ARRAY[1..CstNbInv_PTR_G] OF  TOR; 	(* TRUE := CB opened, False : CB closed, INV 1 (DI_202) / INV 2 (DI_203) *)
	Transfo_Synthesis				: Transfo_MV; 							(* Transfo *)
	 	 						
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>